--- a/body.html
+++ b/body.html
@@ -13,28 +13,24 @@
         <h1>Ayrton Godoy</h1>
     </header>
 
-    <section>
-        <h2>Información de Contacto</h2>
-        <ul>
-            <li>Dirección: Cordoba, Argentina</li>
-            <li>Teléfono: 3548404310</li>
-            <li>Correo Electrónico: augodoyponce@escuelasproa.edu.ar</li>
-        </ul>
-    </section>
+
 
     <section>
         <h2>Experiencia Laboral</h2>
+        <br>
         <article>
-            <h3>estudiante</h3>
+            <h2>Estudiante</h2>
 
         </article>
 
     </section>
 
     <section>
-        <h2>Educación</h2>
+        <h2>Titulos y Educaion</h2>
         <article>
-            <h3>bachillerato en software</h3>
+            <p>Bachillerato en software</p>
+            <p>Programador</p>
+            <p></p> titulo de fullstack</p>
             <p>Escuela proa la Falda - Cordoba, Argentina </p>
         </article>
 
@@ -47,6 +43,14 @@
             <li>Trabajo en equipo</li>
             <li>Buen trabajo bajo precion</li>
             <li>Aprendizaje rapido</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Información de Contacto</h2>
+        <ul>
+            <li>Dirección: Cordoba, Argentina</li>
+            <li>Teléfono: 3548404310</li>
+            <li>Correo Electrónico: augodoyponce@escuelasproa.edu.ar</li>
         </ul>
     </section>
 
